<resources>
    <string name="app_name">Business Card Generator</string>
    <string name="person_name">Person\'s Name</string>
    <string name="company_name">Company\'s Name</string>
    <string name="phone">Phone</string>
    <string name="email">e-Mail</string>
    <string name="business_card_icon_description">Card icon used for creating a new Business Card.</string>
    <string name="insert_card_icon_description">Save Card Button</string>
    <string name="insert_new_card">Insert New Card</string>
    <string name="color_picker">Choose color</string>
    <string name="card_added_success">Card added successfully</string>
    <string name="fill_all_fields_warning">Please fill all fields</string>
    <string name="success_captured_image">Image saved to gallery</string>
    <string name="share_image_label">Share this Business Card as Image</string>
    <string name="color_picked">Color picked</string>
    <string name="card_deleted_label">Card deleted</string>

    <array name="colors">
        <item>#FF7F50</item>
        <item>#FF69B4</item>
        <item>#ADFF2F</item>
        <item>#8B008B</item>

        <item>#87CEEB</item>
        <item>#DAA520</item>
        <item>#00FFFF</item>
        <item>#FF00FF</item>
        <item>#C0C0C0</item>
        <item>#808080</item>
        <item>#800000</item>
        <item>#008000</item>
    </array>
</resources>